<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_training">

    <fragment
        android:id="@+id/navigation_training"
        android:name="by.buglak.fitflow.ui.training.TrainingsFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="by.buglak.fitflow.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="by.buglak.fitflow.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>
