<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.training.TrainingFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/raleway_bold"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_home"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-145dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="17dp">

                <ImageButton
                    android:id="@+id/fullBodyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/full_body"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/overlock_bold"
                    android:text="@string/full_body"
                    android:textColor="#FFF"
                    android:textSize="32sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="17dp">

                <ImageButton
                    android:id="@+id/situpsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/situps"
                    android:scaleType="centerCrop"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sit_ups"
                    android:textColor="#FFF"
                    android:textSize="32sp"
                    android:fontFamily="@font/overlock_bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="17dp">

                <ImageButton
                    android:id="@+id/pushupsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/pushups"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/push_ups"
                    android:textColor="#FFF"
                    android:textSize="32sp"
                    android:fontFamily="@font/overlock_bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="17dp">

                <ImageButton
                    android:id="@+id/squatsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/squats"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/squats"
                    android:textColor="#FFF"
                    android:textSize="32sp"
                    android:fontFamily="@font/overlock_bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="17dp">

                <ImageButton
                    android:id="@+id/pullupsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/pullups"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/pull_ups"
                    android:textColor="#FFF"
                    android:textSize="32sp"
                    android:fontFamily="@font/overlock_bold"/>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>