<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#272A36">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="#161B1F"
            app:itemTextColor="#FFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu" />

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:navGraph="@navigation/mobile_navigation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/afterTrainingTemporary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="invisible">

        <TextView
            android:id="@+id/wkCompl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout_completed"
            android:textColor="#FFF"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/underCompl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="day+mode"
            android:textColor="#FFF"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wkCompl" />

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tempResultsBtn"
            app:layout_constraintTop_toBottomOf="@+id/underCompl">

            <RelativeLayout
                android:id="@+id/timeTemp"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/timeImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/time_img" />

                <TextView
                    android:id="@+id/timeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timeImg"
                    android:textColor="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timeValue"
                    android:text="@string/min"
                    android:textColor="#FFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/kkalTemp"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="0.5"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/kkalImg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/kkal_img" />

                <TextView
                    android:id="@+id/kkalValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kkalImg"
                    android:textColor="#FFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/kkalValue"
                    android:text="@string/kcal"
                    android:textColor="#FFF" />
            </RelativeLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tempResultsBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/done"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
